<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:orientation="vertical"
              android:background="@drawable/diolog"
              android:layout_gravity="center"
              android:scaleType="centerCrop"
              android:screenOrientation="portrait"
              android:layout_margin="10dp" android:padding="2dp" >

    <Button
            android:text="X"
            android:layout_width="40dp"
            android:layout_height="40dp" android:id="@+id/btn_close" android:background="@drawable/two_style_btn"
            android:layout_gravity="right" android:layout_margin="10dp" tools:ignore="TouchTargetSizeCheck"/>

    <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

        <TextView
                android:text="@string/task"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/tv_info_diolog" android:layout_margin="10dp"
                android:textSize="25sp" android:textColor="#F1F0F0" android:textStyle="normal"
                android:gravity="center"/>
        <EditText android:layout_width="match_parent" android:layout_height="wrap_content"
                  tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck" android:hint="@string/namething"
                  android:textColorHint="#72FFFFFF" android:layout_gravity="center" android:layout_margin="30dp"
                  android:textSize="24sp" android:id="@+id/ed_name_stuff"/>
        <Button
                android:text="@string/savename"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/btn_save_name" android:layout_margin="20dp"
                android:background="@drawable/two_style_btn" android:layout_gravity="center" android:padding="5dp"
                android:textColor="#000000"/>
    </androidx.appcompat.widget.LinearLayoutCompat>

</LinearLayout>