<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity" android:padding="5dp" style="@style/CardView"
        android:background="@drawable/wb_fon"
        android:id="@+id/constrain">
    <TextView
            android:layout_width="0dp"
            android:layout_height="220dp" android:id="@+id/tv_result"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            android:textSize="18sp" app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="56dp"
            android:textColor="#FFFCFC"/>
    <EditText
            android:layout_width="294dp"
            android:layout_height="45dp"
            android:inputType="number"
            android:ems="10"
            android:gravity="center"
            android:id="@+id/ed_priceFirst"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck" android:hint="@string/firstPrice"
            android:textColorHint="#7ECDC9C9" android:textSize="18sp"
            app:layout_constraintTop_toBottomOf="@+id/tv_result" android:layout_marginTop="20dp"
            app:layout_constraintHorizontal_bias="0.495"/>
    <EditText
            android:layout_width="294dp"
            android:layout_height="48dp"
            android:inputType="number"
            android:ems="10"
            android:gravity="center"
            android:id="@+id/ed_priceSecond"
            app:layout_constraintEnd_toEndOf="@+id/ed_priceFirst"
            android:textColorHint="#7ECDC9C9"
            app:layout_constraintStart_toStartOf="@+id/ed_priceFirst" app:layout_constraintHorizontal_bias="0.0"
            tools:ignore="SpeakableTextPresentCheck" android:minHeight="48dp"
            app:layout_constraintTop_toBottomOf="@+id/ed_priceFirst" android:hint="@string/secondPrice"
            android:layout_marginTop="8dp"/>
    <EditText
            android:layout_width="294dp"
            android:layout_height="51dp"
            android:inputType="number"
            android:ems="10"
            android:gravity="center"
            android:id="@+id/ed_number"
            android:textColorHint="#7ECDC9C9"
            tools:ignore="SpeakableTextPresentCheck"
            android:minHeight="48dp" app:layout_constraintEnd_toEndOf="@+id/ed_priceSecond"
            app:layout_constraintStart_toStartOf="@+id/ed_priceSecond"
            app:layout_constraintTop_toBottomOf="@+id/ed_priceSecond"
            android:hint="@string/numbers" android:layout_marginTop="8dp" app:layout_constraintHorizontal_bias="0.0"/>
    <EditText
            android:layout_width="294dp"
            android:layout_height="49dp"
            android:inputType="number"
            android:ems="10"
            android:textColorHint="#7ECDC9C9"
            android:gravity="center"
            android:id="@+id/ed_procent"
            android:minHeight="48dp" tools:ignore="SpeakableTextPresentCheck"
            app:layout_constraintTop_toBottomOf="@+id/ed_number" app:layout_constraintEnd_toEndOf="@+id/ed_number"
            app:layout_constraintStart_toStartOf="@+id/ed_number" android:hint="@string/procent"
            android:layout_marginTop="8dp" app:layout_constraintHorizontal_bias="0.0"/>
    <EditText
            android:layout_width="294dp"
            android:layout_height="48dp"
            android:inputType="number"
            android:ems="10"
            android:gravity="center"
            android:textColorHint="#7ECDC9C9"
            android:id="@+id/ed_priceLogistic"
            android:minHeight="48dp"
            tools:ignore="SpeakableTextPresentCheck"
            app:layout_constraintTop_toBottomOf="@+id/ed_procent" app:layout_constraintEnd_toEndOf="@+id/ed_procent"
            app:layout_constraintStart_toStartOf="@+id/ed_procent" android:layout_marginTop="8dp"
            app:layout_constraintHorizontal_bias="0.491" android:hint="@string/logistic"
    />
    <Button
            android:text="@string/result"
            android:background="@drawable/two_style_btn"
            android:layout_width="162dp"
            android:layout_height="49dp" android:id="@+id/btn_result"
            app:layout_constraintStart_toStartOf="@+id/ed_priceLogistic"
            app:layout_constraintEnd_toEndOf="@+id/ed_priceLogistic" app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintBottom_toBottomOf="parent" android:layout_marginBottom="72dp"
            app:layout_constraintTop_toBottomOf="@+id/ed_priceLogistic" app:layout_constraintVertical_bias="0.4"
            android:padding="3dp"/>
    <Button
            android:text="@string/delete"
            android:background="@drawable/two_style_btn"
            android:layout_width="154dp"
            android:layout_height="51dp" android:id="@+id/btn_delete"
            app:layout_constraintTop_toBottomOf="@+id/btn_result" app:layout_constraintEnd_toEndOf="@+id/btn_result"
            app:layout_constraintStart_toStartOf="@+id/btn_result" android:layout_marginTop="20dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintVertical_bias="0.0" android:padding="3dp"/>
    <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" app:srcCompat="@android:drawable/ic_menu_save"
            android:id="@+id/btn_save"
            android:background="#00FFFEFB" android:backgroundTint="#00FFFEFE" app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginTop="16dp" android:layout_marginEnd="4dp"
            app:layout_constraintBottom_toTopOf="@+id/tv_result" app:layout_constraintVertical_bias="1.0"
            tools:ignore="SpeakableTextPresentCheck" android:minWidth="48dp" android:minHeight="48dp"
            android:layout_marginBottom="2dp"/>
    <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" app:srcCompat="?attr/actionModePasteDrawable"
            android:id="@+id/btn_notes" app:layout_constraintEnd_toStartOf="@+id/btn_save"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/tv_result" app:layout_constraintHorizontal_bias="0.016"
            app:layout_constraintVertical_bias="0.722" android:background="#00FFFFFF" android:minWidth="48dp"
            android:minHeight="48dp" tools:ignore="SpeakableTextPresentCheck" android:layout_marginTop="16dp"
            android:layout_marginStart="4dp" android:layout_marginBottom="2dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>